--- a/TolyID/MVVM/Views/Cadastro.xaml
+++ b/TolyID/MVVM/Views/Cadastro.xaml
@@ -44,7 +44,7 @@
                        VerticalOptions="Center"
                        HorizontalOptions="Center"/>
             </Frame>
-            
+
             <!-- DADOS GERAIS -->
             <Frame HeightRequest="790"
                    BorderColor="{StaticResource Primary}">
@@ -57,66 +57,20 @@
                                Style="{StaticResource LabelTitulo}"/>
                     </Frame>
 
-                    <!-- ID ANIMAL -->
-                    <Frame Style="{StaticResource FrameEntradaDeDados}">
-                        <Entry Placeholder="ID ANIMAL"/>
-                    </Frame>
-
-                    <!-- Nº IDENTIFICAÇÃO -->
-                    <Frame Style="{StaticResource FrameEntradaDeDados}">
-                        <Entry Placeholder="Nº IDENTIFICAÇÃO"
-                               Keyboard="Numeric"/>
-                    </Frame>
-
-                    <!-- LOCAL DE CAPTURA -->
-                    <Frame Style="{StaticResource FrameEntradaDeDados}">
-                        <Entry Placeholder="LOCAL DE CAPTURA"/>
-                    </Frame>
-
-                    <!-- EQUIPE RESPONSÁVEL -->
-                    <Frame Style="{StaticResource FrameEntradaDeDados}">
-                        <Entry Placeholder="EQUIPE RESPONSÁVEL"/>
-                    </Frame>
-
-                    <!-- INSTITUIÇÃO -->
-                    <Frame Style="{StaticResource FrameEntradaDeDados}">
-                        <Entry Placeholder="INSTITUIÇÃO"/>
-                    </Frame>
-
-                    <!-- PESO -->
-                    <Frame Style="{StaticResource FrameEntradaDeDados}">
-                        <Entry Placeholder="PESO (G)"
-                               Keyboard="Numeric"/>
-                    </Frame>
-
-                    <!-- Nº MICROCHIP -->
-                    <Frame Style="{StaticResource FrameEntradaDeDados}">
-                        <Entry Placeholder="Nº MICROCHIP"
-                               Keyboard="Numeric"/>
-                    </Frame>
-
-                    <!-- DATA CAPTURA -->
-                    <Frame Style="{StaticResource FrameEntradaDeDados}">
-                        <Entry Placeholder="DATA CAPTURA"/>
-                    </Frame>
-
-                    <!-- HORÁRIO CAPTURA-->
-                    <Frame Style="{StaticResource FrameEntradaDeDados}">
-                        <Entry Placeholder="HORÁRIO CAPTURA"/>
-                    </Frame>
-
-                    <!-- CONTATO RESPONSÁVEL -->
-                    <Frame Style="{StaticResource FrameEntradaDeDados}">
-                        <Entry Placeholder="CONTATO DO RESPONSÁVEL"/>
-                    </Frame>
-
-                    <!-- OBSERVAÇÕES -->
-                    <Frame Style="{StaticResource FrameEntradaDeDados}"
-                           HeightRequest="200">
-                        <Entry Placeholder="OBSERVAÇÕES"/>
-                    </Frame>
-
-
+                    <ListView ItemsSource="{Binding DadosGerais}">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <ViewCell>
+                                    <Frame Style="{StaticResource FrameEntradaDeDados}">
+                                        <Entry Placeholder="{Binding Nome}"
+                                               Text="{Binding Valor}"
+                                               Keyboard="{Binding TipoTeclado}"/>
+                                    </Frame>
+                                </ViewCell>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                    
                 </StackLayout>
             </Frame>
 
