feat: nova cor de fundo da tela de cadastro

--- a/TolyID/MVVM/Views/Cadastro.xaml
+++ b/TolyID/MVVM/Views/Cadastro.xaml
@@ -5,6 +5,7 @@
              xmlns:viewmodel="clr-namespace:TolyID.MVVM.ViewModels"
              Shell.BackgroundColor="{StaticResource Primary}"
              Shell.TitleColor="White"
+             BackgroundColor="White"
              Title="Cadastro">
 
     <ContentPage.Resources>
