--- a/TolyID/MVVM/Views/Capturas.xaml
+++ b/TolyID/MVVM/Views/Capturas.xaml
@@ -2,11 +2,9 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TolyID.MVVM.Views.Capturas"
+             Shell.BackgroundColor="{StaticResource Primary}"
+             Shell.TitleColor="White"
              Title="Capturas">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    
+    
 </ContentPage>
