feat: icones do TabBar, campos de amostras

--- a/TolyID/AppShell.xaml
+++ b/TolyID/AppShell.xaml
@@ -11,10 +11,12 @@
 
         <ShellContent
             Title="Cadastro"
+            Icon="icone_tela_cadastro.png"
             ContentTemplate="{DataTemplate views:Cadastro}"/>
 
         <ShellContent
             Title="Capturas"
+            Icon="icone_tela_capturas.png"
             ContentTemplate="{DataTemplate views:Capturas}"/>   
 
     </TabBar>
