feat: criacao modelos de Amostra, Biometria, DadosGerais e TatuCapturado

--- a/TolyID/MVVM/Views/Cadastro.xaml
+++ b/TolyID/MVVM/Views/Cadastro.xaml
@@ -159,10 +159,15 @@
                         <ContentView Content="{Binding Outros.EntradaDeDado}"/>
                     </Frame>
 
-
-
                 </StackLayout>
             </Frame>
+
+            <Button Command="{Binding CriaTatuCapturadoCommand}"
+                    Text="Finalizar"
+                    TextColor="White"
+                    FontAttributes="Bold"
+                    BackgroundColor="{StaticResource Primary}"
+                    CornerRadius="20"/>
 
         </VerticalStackLayout>
     </ScrollView>    
