refactor: nova implementacao da configuracao de binding dos campos do formulario

--- a/TolyID/MVVM/Views/Cadastro.xaml
+++ b/TolyID/MVVM/Views/Cadastro.xaml
@@ -106,6 +106,8 @@
 
             </Frame>
 
+            <Button Clicked="Button_Clicked"/>
+
             <!--BIOMETRIA-->
             <Frame HeightRequest="1570"
                    BorderColor="{StaticResource Primary}">
