novos testes na implementação de bd

--- a/TolyID/MVVM/Views/Capturas.xaml
+++ b/TolyID/MVVM/Views/Capturas.xaml
@@ -25,7 +25,9 @@
     <StackLayout>
 
         <CollectionView ItemsSource="{Binding Tatus}" ItemTemplate="{StaticResource TatusCapturadosTemplate}"/>
-        <Button Command="{Binding CarregaTatusCommand}"/>
+        <Button Text="Atualizar"
+                WidthRequest="200"
+                Command="{Binding CarregaTatusCommand}"/>
         
     </StackLayout>
     
