--- a/TolyID/MVVM/Views/TatuView.xaml
+++ b/TolyID/MVVM/Views/TatuView.xaml
@@ -2,19 +2,30 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TolyID.MVVM.Views.TatuView"
-             Title="{Binding IdentificacaoAnimal}"           
+             Title="{Binding Tatu.IdentificacaoAnimal}"           
              Shell.BackgroundColor="{StaticResource Primary}"
              Shell.TitleColor="White"
              BackgroundColor="White">
 
-
-    <ScrollView Padding="10">
-        <StackLayout>
-            <Frame Style="{StaticResource FrameTitulo}" >
-                <Label Text="CAPTURAS" Style="{StaticResource LabelTitulo}"/>
+    <ContentPage.Resources>
+        <DataTemplate x:Key="CapturasTemplate">
+            <Frame Margin="0, 5, 0, 5" Padding="10" BorderColor="{StaticResource Primary}">
+                <StackLayout>
+                    <Label Text="{Binding Id, StringFormat='Captura N° {0}'}" FontAttributes="Bold" TextColor="{StaticResource Primary}"/>
+                    <Label Text="{Binding DadosGerais.DataDeCaptura, StringFormat='{0:dd/MM/yyyy}'}" FontAttributes="Bold" TextColor="{StaticResource Primary}"/>
+                    <Label Text="{Binding DadosGerais.HorarioDeCaptura, StringFormat='{0:hh\\:mm}'}" FontAttributes="Bold" TextColor="{StaticResource Primary}"/>
+                </StackLayout>
             </Frame>
+        </DataTemplate>
+    </ContentPage.Resources>
 
-            <CollectionView/>
-        </StackLayout>
-    </ScrollView>
+    <Grid Padding="20">
+            
+        <ScrollView>
+            <CollectionView ItemsSource="{Binding Capturas}" ItemTemplate="{StaticResource CapturasTemplate}"/>
+        </ScrollView>
+
+        <Button HorizontalOptions="End" VerticalOptions="End" Text="Adicionar Captura" Clicked="AdicionarCaptura_Clicked"/>
+    </Grid>
+
 </ContentPage>
