--- a/TolyID/MVVM/Views/CadastroCapturaView.xaml
+++ b/TolyID/MVVM/Views/CadastroCapturaView.xaml
@@ -70,6 +70,41 @@
             </StackLayout>
         </DataTemplate>
 
+        <DataTemplate x:Key="TemplateParametrosFisiologicos">
+            <Frame BorderColor="{StaticResource Primary}" Margin="0, 0, 0, 10">
+                <Grid RowDefinitions="*, *" ColumnDefinitions="*, *"
+                      RowSpacing="10" ColumnSpacing="10">
+
+                    <StackLayout Spacing="2">
+                        <Label Text="FC" Style="{StaticResource LabelNomeCampo}"/>
+                        <Frame Style="{StaticResource FrameEntradaDeDados}">
+                            <Entry Text="{Binding Fc}" Keyboard="Numeric" />
+                        </Frame>
+                    </StackLayout>
+
+                    <StackLayout Spacing="2" Grid.Row="1" >
+                        <Label Text="FR" Style="{StaticResource LabelNomeCampo}"/>
+                        <Frame Style="{StaticResource FrameEntradaDeDados}">
+                            <Entry Text="{Binding Fr}" Keyboard="Numeric" />
+                        </Frame>
+                    </StackLayout>
+
+                    <StackLayout Spacing="2" Grid.Column="1">
+                        <Label Text="OXIMETRIA" Style="{StaticResource LabelNomeCampo}"/>
+                        <Frame Style="{StaticResource FrameEntradaDeDados}">
+                            <Entry Text="{Binding Oximetria}" Keyboard="Numeric" />
+                        </Frame>
+                    </StackLayout>
+
+                    <StackLayout Spacing="2" Grid.Column="1" Grid.Row="1">
+                        <Label Text="TEMPERATURA" Style="{StaticResource LabelNomeCampo}"/>
+                        <Frame Style="{StaticResource FrameEntradaDeDados}">
+                            <Entry Text="{Binding Temperatura}" Keyboard="Numeric" />
+                        </Frame>
+                    </StackLayout>
+                </Grid>
+            </Frame>
+        </DataTemplate>
     </ContentPage.Resources>
       
     <ScrollView Padding="10">
@@ -86,7 +121,8 @@
                        HorizontalOptions="Center"/>
             </Frame>
 
-            <!-- DADOS GERAIS -->
+            <!-- ==================== DADOS GERAIS ==================== -->
+            
             <Frame HeightRequest="790"
                    BorderColor="{StaticResource Primary}">
 
@@ -106,9 +142,51 @@
 
             </Frame>
 
-            <!--<Button Clicked="Button_Clicked"/>-->
+            <!-- ==================== FICHA ANESTÉSICA ==================== -->
 
-            <!--BIOMETRIA-->
+            <Frame HeightRequest="1000"
+                   BorderColor="{StaticResource Primary}">
+
+                <StackLayout Spacing="10">
+                    
+                    <!-- TÍTULO -->
+                    <Frame Style="{StaticResource FrameTitulo}">
+                        <Label Text="Ficha Anestésica"
+                               Style="{StaticResource LabelTitulo}"/>
+                    </Frame>
+                    
+                    <!-- CAMPOS -->
+                    <CollectionView ItemsSource="{Binding FichaAnestesica}"
+                                    ItemTemplate="{StaticResource TemplateCamposDigitados}"/>
+
+                    <Grid ColumnDefinitions="8*, 2*">
+                        
+                        <Label Text="Parâmetros Fisiológicos a cada 10 minutos" 
+                               TextColor="{StaticResource Primary}"
+                               FontAttributes="Bold"
+                               HorizontalOptions="Center"/>
+
+                        <Button Grid.Column="1" 
+                                CornerRadius="30"
+                                WidthRequest="45" 
+                                Scale=".8"
+                                BackgroundColor="{StaticResource Primary}"
+                                ImageSource="icone_mais_branco.png"
+                                Command="{Binding AdicionarParametrosFisiologicosCommand}"/>
+                    </Grid>
+                  
+                    <!-- PARÂMETROS FISIOLÓGICOS -->
+                    <ScrollView HeightRequest="500">
+                        <CollectionView ItemsSource="{Binding ParametrosFisiologicos}" 
+                                        ItemTemplate="{StaticResource TemplateParametrosFisiologicos}"/>
+                    </ScrollView>
+
+                </StackLayout>
+                
+            </Frame>
+
+            <!-- ==================== BIOMETRIA ==================== -->
+            
             <Frame HeightRequest="1570"
                    BorderColor="{StaticResource Primary}">
 
@@ -126,8 +204,9 @@
 
                 </StackLayout>
             </Frame>
+
+            <!-- ==================== AMOSTRAS ==================== --> 
             
-            <!-- AMOSTRAS -->
             <Frame HeightRequest="300"
                    BorderColor="{StaticResource Primary}">
 
@@ -164,7 +243,7 @@
                 </StackLayout>
             </Frame>
 
-            <Button Command="{Binding CriaTatuCapturadoCommand}"
+            <Button Command="{Binding AdicionaCapturaNoBancoCommand}"
                     Text="Finalizar"
                     TextColor="White"
                     FontAttributes="Bold"
