--- a/TolyID/MVVM/Views/TatuView.xaml
+++ b/TolyID/MVVM/Views/TatuView.xaml
@@ -9,7 +9,7 @@
 
     <ContentPage.Resources>
         <DataTemplate x:Key="CapturasTemplate">
-            <Frame Margin="0, 5, 0, 5" Padding="10" BorderColor="{StaticResource Primary}">
+            <Frame Margin="0, 5, 0, 5" Padding="10" BorderColor="{StaticResource Primary}" InputTransparent="True">
                 <StackLayout>
                     <Label Text="{Binding Id, StringFormat='Captura N° {0}'}" FontAttributes="Bold" TextColor="{StaticResource Primary}"/>
                     <Label Text="{Binding DadosGerais.DataDeCaptura, StringFormat='{0:dd/MM/yyyy}'}" FontAttributes="Bold" TextColor="{StaticResource Primary}"/>
@@ -20,12 +20,21 @@
     </ContentPage.Resources>
 
     <Grid Padding="20">
-            
+
+                  
         <ScrollView>
-            <CollectionView ItemsSource="{Binding Capturas}" ItemTemplate="{StaticResource CapturasTemplate}"/>
+            <CollectionView ItemsSource="{Binding Capturas}" 
+                            ItemTemplate="{StaticResource CapturasTemplate}"
+                            SelectionMode="Single"
+                            SelectionChanged="Capturas_SelectionChanged"/>
         </ScrollView>
 
-        <Button HorizontalOptions="End" VerticalOptions="End" Text="Adicionar Captura" Clicked="AdicionarCaptura_Clicked"/>
+        <Button HorizontalOptions="End" 
+                VerticalOptions="End" 
+                Text="Adicionar Captura"
+                TextColor="White"
+                BackgroundColor="{StaticResource Primary}"
+                Clicked="AdicionarCaptura_Clicked"/>
     </Grid>
 
 </ContentPage>
